comment favicon + change github icon + rm '/' in config

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ tagline:                               # it will display as the sub-title
 description: >-                        # used by seo meta and the atom feed
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'https://amirr0r.github.io/'
+url: 'https://amirr0r.github.io'
 
 author: amirr0r	                  	# change to your full name
 
