--- a/.github/workflows/pages-deploy.yml
+++ b/.github/workflows/pages-deploy.yml
@@ -38,10 +38,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
+          #cache: "npm"
       - name: Install & build assets
         run: |
-          npm ci
+          npm install
           npm run build
       - name: Setup Pages
         id: pages
